[package]
name = "sma_inverter_exporter"
version = "0.3.0"
authors = ["dr0ps https://github.com/dr0ps"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus = {version= "0.13", default-features = false}
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }

socket2 = {version = "0.5"}
bytebuffer-new = "0.2"
rand = "0.9"
lazy_static = "1.5"
config = {version = "0.15", features=["ini"]}
clap = { version = "4.5.54", features = ["derive"] }
